--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,9 @@
 version: "3.5"
 services:
   crms:
-    image: app:v:17
+    image: app:v13
     ports:
-      - "8081:8080"
-    networks:
-      frontend:
-  upload:
-    image: app:v:1
-    ports:
-      - "8082:8080"
+      - "80:8080"
     networks:
       frontend:
 networks:
