--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     networks:
       frontend:
   upload:
-    image: app:v:upload_version
+    image: app:v:2
     image: app:v:1
     ports:
       - "8082:8080"
