--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 version: "3.5"
 services:
   crms:
-    image: app:v20
+    image: crms:v20
     ports:
-      - "80:8080"
+      - "8081:8080"
+    networks:
+      frontend:
+  upload:
+    image: crms:v20
+    ports:
+      - "8082:8080"
     networks:
       frontend:
 networks:
