--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     networks:
       frontend:
   upload:
-    image: crms:v20
+    image: upload:v20
     ports:
       - "8082:8080"
     networks:
