--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.5"
 services:
   crms:
-    image: crms:v27
+    image: crms:v${BUILD_ID}
     ports:
       - "8081:8080"
     networks:
       frontend:
   upload:
-    image: upload:v5
+    image: upload:v${BUILD_ID}
     ports:
       - "8082:8080"
     networks:
